@@ -4,6 +4,7 @@ Isotope eCommerce Changelog
 
 Version 0.2.8 (2011-03-??)
 ------------------------------
+- Fixed issue with email address on checkout
 
 Version 0.2.7 (2011-03-09)
 ------------------------------
